<resources>
    <string name="app_name">Swoosh</string>
    <string name="backgound_image">Backgound image</string>
    <string name="backgound_for_league">Backgound for League</string>
    <string name="mens">Mens</string>
    <string name="desired_league">Desired League:</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_all_going_out">ON ALL GOING OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a Team in Your City and Dominate the League</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_screen">Welcome screen</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="app_logo">app logo</string>
    <string name="skill_level">skill level</string>
    <string name="i_am_a">I am a:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-ed League Near You..</string>

</resources>